2005-07-20  Roman Kennke  <roman@kennke.org>

	* javax/swing/JLayeredPane.java:
	Fixed and extended API documentation / class description.

2005-07-20  Roman Kennke  <roman@kennke.org>

	* javax/swing/Action.java:
	Fixes the class description to be more concise.

2005-07-20  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedCharacterIterator.java: fixed minor API doc
	problems and 80 column wrapping;
	* java/text/BreakIterator.java
	(getCharacterInstance(Locale)): matched argument name to API docs,
	(getLineInstance(Locale)): likewise,
	(getSentenceInstance(Locale)): likewise,
	(getWordInstance(Locale)): likewise,
	and fixed minor API doc problems all over;
	* java/text/CharacterIterator.java: fixed minor API doc problems.
	
2005-07-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/PortableServer/ForwardRequest.java: New file.

2005-17-19  Lillian Angel <langel@redhat.com>

	* javax/swing/plaf/BasicTreeUI
	(setModel): changed to call JTree's setModel
	(setRootVisible): Likewise
	(isRootVisible): Likewise
	(getClosestPathForLocation): Implemented
	(paint): took out translate, no need to.
	(mouseClicked): clicking made smoother.
	
2005-17-19  Lillian Angel <langel@redhat.com>

	* javax/swing/plaf/BasicTreeUI:
	Moved several functions around for readability.
	Some formatting in various places.
	(paint): extended size of border drawn
	(mouseClicked): checked if path was null
	(getCellLocation): Now package-private.
	(paintNode): Implemented, there is no need to paint the leaf and non
	leaf separately. Works with custom icons.
	(paintRecursive): Now package-private. Changed to paint with paintNode.
	(paintControlIcons): Now package-private.
	(hasControlIcons): Now package-private.

2005-17-19  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSlider.java
	(createStandardLabels(int)): updated API docs,
	(createStandardLabels(int, int)): throw IllegalArgumentException for
	bad arguments.
