@@ -1,3 +1,12 @@
+2005-07-20  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/JSlider.java
+	(setMinimum): fire PropertyChangeEvent for new value,
+	(setMaximum): likewise,
+	(setSnapToTicks): fire PropertyChangeEvent, not ChangeEvent,
+	(setPaintTrack): fire PropertyChangeEvent for new value,
+	(setPaintLabels): initialise label table.
+
 2005-07-20  Roman Kennke  <roman@kennke.org>
 
 	* javax/swing/JLayeredPane.java:
